<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmLogout"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_constraintCircleRadius="20dp"
    android:orientation="vertical"
    tools:context=".Activity.ConfirmLogOutDialog">
    <TextView
        android:id="@+id/outconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/coming_from"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_yesout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="start"
            android:text="@string/yes"
            android:layout_marginRight="20dp" />
        <Button
            android:id="@+id/btn_noout"
            android:layout_width="80dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="end"
            android:text="@string/no"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</LinearLayout>