<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/rec_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow_bottop" />
    <TextView
        android:id="@+id/titleTv"
        android:text="@string/popular"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="70dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <ImageView
            android:id="@+id/loc_icon"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/locTv"
            android:text="@string/exmp_loc"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:textSize="16sp"
            android:alpha="0.5"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/loc_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>