<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/recomendation"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:appCornerRadius="19dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rec_img_example"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"
                />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/rec_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="-0.6dp"
                android:background="@drawable/shadow_menu">
                <LinearLayout
                    android:id="@+id/indicatorsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    />

                <!--<ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_vector" />-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-1dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_rectangle_44"
                    android:layout_marginEnd="-1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rec_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                    <TextView
                        android:id="@+id/textsd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/rec"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <ImageView
                        android:layout_width="150px"
                        android:layout_height="150px"
                        android:id="@+id/btn_profill"
                        android:background="@drawable/ellipse"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/search_btn_home"
                    app:layout_constraintTop_toBottomOf="@id/rec_txt"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5">
                    <ImageButton
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/search_container"/>
                    <ImageView
                        android:id="@+id/search_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/ic_baseline_search_24"
                        android:layout_marginStart="20dp" />
                    <TextView
                        app:layout_constraintLeft_toRightOf="@id/search_btn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recomendation">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="25dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mydata"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:listitem="list item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

